# pill-rust-test

./: Cargo.toml  README.md  load_image.sh  memory.x  openocd.cfg
.cargo/: config
examples/: crash.rs  device.rs  exception.rs  hello.rs  itm.rs  panic.rs  test_on_host.rs
src/: main.rs
