cargo-features = ["profile-overrides"]
[package]
authors = ["Nicolas Raynaud <github@nraynaud.com>"]
edition = "2018"
readme = "README.md"
name = "pill-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
nb = "0.1.1"

# libm = "0.1.2"
mpu9250 = "0.9.4"
imu = {path = "../imu"}

[dependencies.fast_fmt]
default-features = false
version = "0.1.3"

[dependencies.heapless]
features = ["const-fn"]
version = "0.4.1"
# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"
[dependencies.cortex-m-rtfm]
version = "0.4.2"

[dependencies.stm32f103xx]
features = ["rt"]
version = "0.11.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32f103xx-hal]
path = "../stm32f103xx-hal"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.either]
default-features = false
version = "1.5.0"

# this lets you use `cargo fix`!
[[bin]]
name = "pill-rust"
test = false
bench = false

[profile.dev]
opt-level = 1
incremental=false
lto=true
debug = true

[profile.dev.overrides."*"]
opt-level = 1

[profile.release]
opt-level = 2
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
